	`after-make-frame-hook'.
	(w3m-copy-buffer): Copy a copy of `w3m-initial-frames'.
	(w3m-delete-buffer): Pop up another emacs-w3m buffer instead of
	deleting a frame; remove a deleted frame from `w3m-initial-frames'.
	(w3m-delete-frames-and-windows): Also allow a window or a frame as
	the optional argument; emulate XEmacs version's `one-window-p'.
	(w3m-select-buffer): Delete other emacs-w3m frames and windows.
	(w3m-select-buffer-copy-buffer): Revert the 2003-11-11 change.
	(w3m-select-buffer-delete-buffer): Simplify.

	(w3m-display-width): New function for showing pages as if there is
	no selection window.
	(w3m-halfdump-command-common-arguments): Use it.
	(w3m-make-separator): Use it.
	(w3m-about-db-history): Use it.
	(w3m-header-line-insert): Work as if there is no selection window.

	* w3mhack.el (w3mhack-generate-colon-keywords-file): Preset
	`:strike-through' and `:strikethru' which aren't supported by the
	old cus-face.el.

2003-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-popup-buffer): Reuse an existing window or frame if
	it exists; set the value for `w3m-initial-frame' properly; raise,
	select and focus the new frame.
	(TopLevel): Make `select-frame-set-input-focus' unbound if it is a
	dummy.
	(w3m-view-this-url-1): Show a progress message.
	(w3m-copy-buffer): Simplify the code to call `w3m-popup-buffer'.
	(w3m-alive-p): Add an optional arg `visible' (see docs); use
	inlining `w3m-list-buffers'.
	(w3m): Simplify the code using `w3m-popup-buffer'; specify the
	optional arg to `w3m-alive-p'; protect against the case of no url.
	(w3m-select-buffer-copy-buffer): Bind `w3m-pop-up-windows' to nil.

	* w3m-util.el (w3m-list-buffers): Make it into a normal function;
	don't call itself recursively.

2003-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/mew-shimbun.el (static-if): New macro providing only
	when compiling.
	(mew-shimbun-visit-folder): Replace `w3m-static-if' with
	`static-if'.